--- a/index.css
+++ b/index.css
@@ -517,6 +517,10 @@ dialog {
 dialog h3 {
     margin-bottom: 2rem;
     font-size: var(--h3_font-Size);
+    width: calc(100% - 5.6rem);
+ 
+    text-align: center;
+
 }
 dialog strong {
     font-size: var(--p_big-font-Size);
@@ -685,7 +689,7 @@ dialog .info-container {
     top: 1.5rem;
     right: 2rem;
     cursor: pointer;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: var(--p_big-font-Size);
 }
 .location-qstn-btn:hover,
 .location-qstn-btn:focus-visible{
@@ -726,7 +730,13 @@ dialog .info-container {
         text-align: start;
         align-items: start;
     }
-
+        .close-dialog-btn {
+            right: .7rem;
+            top: 3rem;
+            border: 1px solid black;
+            width: 1rem;
+            height: 1rem;
+        }
 }
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (max-width: 768px) {
@@ -845,6 +855,8 @@ dialog .info-container {
         .contacto-bg {
             grid-row: 1/2;
         }
+        /* Dialog */
+      
 }
 @media only screen and (min-width: 769px) and (max-width: 1000px) {
     .service-content-wrapper {
