--- a/index.css
+++ b/index.css
@@ -456,7 +456,8 @@ figure img {
     text-align: center;
 }
 /* Legend */
-#foraneo-list > li figcaption {
+#foraneo-list > li figcaption,
+#foraneo-list>li .legend {
     position: absolute;
     background-color: rgb(0, 0, 0);
     left: 0;
@@ -477,7 +478,8 @@ figure img {
     font-size: var(--p_small-font-size);
 }
 /* Location Icon */
-figcaption img {
+figcaption img,
+.legend img {
     width: fit-content !important;
     height: fit-content !important;
 }
@@ -506,11 +508,15 @@ figcaption img {
     filter: brightness(.8);
 }
 
+.foraneo-li-container {
+    position: relative;
+}
 .maps-container {
     position: relative;
     overflow: hidden;
     width: 100%;
     padding-top: 100%;
+
     /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
 }
 iframe {
@@ -520,7 +526,8 @@ iframe {
         bottom: 0;
         right: 0;
         width: 100%;
-        height: 100%;   
+        margin: 0 auto;
+        height: 95%;   
 }
 .swiper-button-next,
 .swiper-button-prev {
